--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -5,8 +5,8 @@ parameters:
     database_host: 127.0.0.1
     database_port: ~
     database_name: symfony
-    database_user: root
-    database_password: ~
+    database_user: bookify
+    database_password: bookify
     # You should uncomment this if you want to use pdo_sqlite
     #database_path: '%kernel.project_dir%/var/data/data.sqlite'
 
@@ -14,6 +14,8 @@ parameters:
     mailer_host: 127.0.0.1
     mailer_user: ~
     mailer_password: ~
+    mailer_mail: ~
+    mailer_name: ~
 
     # A secret key that's used to generate certain security-related tokens
     secret: ThisTokenIsNotSoSecretChangeIt
