--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,8 +14,8 @@ parameters:
     mailer_host: 127.0.0.1
     mailer_user: ~
     mailer_password: ~
-    mailer_mail: ~
-    mailer_name: ~
+    mailer_mail: FIXME
+    mailer_name: FIXME
 
     # A secret key that's used to generate certain security-related tokens
     secret: ThisTokenIsNotSoSecretChangeIt
