--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -36,6 +36,8 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    paths:
+        '%kernel.project_dir%/app/Resources/views': App
 
 # Doctrine Configuration
 doctrine:
