--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "files": [ "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php" ]
     },
     "require": {
-        "php": ">=5.5.9",
+        "php": "7.1",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-migrations-bundle": "^1.0",
         "doctrine/orm": "^2.5",
@@ -51,7 +51,7 @@
     },
     "config": {
         "platform": {
-            "php": "5.6"
+            "php": "7.1.3"
         },
         "sort-packages": true
     },
